--- a/app/pom.xml
+++ b/app/pom.xml
@@ -20,6 +20,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.uavguard.utilities</groupId>
             <artifactId>utilities</artifactId>
             <version>1.0.0</version>
